# for display continuity sake please use 2 spaces instead of tabs

2013-11-29 mmichaud <michael.michaud@free.fr>
  * #199 save raster as can save larger images if memory is available

2013-11-26 Giuseppe Aruta <giuseppe.aruta@gmal.com>
  * Add MoveSelectedLayerPlugin. Move selected layers to Category
  	Adapted from Skyjump MoveSelectedLayers PlugIn to OpenJUMP
  	- Internationalized
  	- Extended the Plugin to work with WMS layers and Sextante Raster layers

2013-11-23 mmichaud <michael.michaud@free.fr>
  * try a fix for #327 (header problem in WMS requests)

2013-11-16 mmichaud <michael.michaud@free.fr>
  * Add 2D/3D option for new Save As PostGIS Table

2013-11-12 mmichaud <michael.michaud@free.fr>
  * Fix in linear referencing plugin

2013-11-11 mmichaud <michael.michaud@free.fr>
  * Fix in new WritableDataStoreDataSource

2013-11-10 mmichaud <michael.michaud@free.fr>
  * Fix #347 about RangeColorTheming (aka equal intervals)
  * Fix #340 JTreeLayerName can now autoscroll when layers are moved up or down

2013-11-09 mmichaud <michael.michaud@free.fr>
  * OpenFileWizard : replaced LayerManager#setFiringEvents(false) by
    LayerViewPanel#setDeferLayerEvents(true) to avoid side effects
    (see #348)
  * ImageLayerManagerPlugIn : now more responsive when 50 or more
    images are loaded at the same time.
  * Add new PostGIS driver with read/write capabilities (transaction
    management).

2013-11-04 mmichaud <michael.michaud@free.fr>
  * Add two plugins related to linear referencing :
    - LinearReferencingOnLayerPlugIn
    - LinearReferencingOnSelectionPlugIn

2013-11-03 ede - xmlize configuration commit
  - moved pretty much all plugins from JUMPConf and OJConf 
    into default-plugins.xml
  - reworked WorkbenchPropertiesFile, WorkbenchProperties, PluginMgr, 
    FeatureInstaller to allow menu reordering, separator inserting, 
    renaming, moving, icon changing etc. via xml file definition
  - some icon modifications